# AI-SmartTour

./: .env.example  .gitignore  README.md  docker-compose.yml
.agents/skills/testing-smarttour/: SKILL.md
.qoder/repowiki/knowledge/zh/: _index.yaml
.qoder/repowiki/zh/content/: 开发指南.md  快速开始.md  故障排除与FAQ.md  数字人服务.md  数据库设计.md  项目概述.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
.workbuddy/memory/: 2026-07-19.md  MEMORY.md
backend/: .dockerignore  Dockerfile  pyproject.toml  start.bat
backend/app/: config.py  main.py
backend/app/api/: analytics.py  auth.py  avatar.py  chat.py  digital_human_broadcast.py  knowledge.py  recommend.py  tts.py
backend/app/core/: agent.py  auth.py  dialogue.py  rag.py  recommend.py  sentiment.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/models/: schemas.py
backend/app/services/: analytics.py  asr.py  digital_human.py  document_parser.py  llm.py  persistence.py  tts.py
backend/tests/: test_agent.py  test_api.py  test_rag.py
digital_human/: Dockerfile  requirements.txt  server.py
docs/competition/: defense-guide.md  optimization-plan.md
docs/design/: architecture.md  tech-selection.md
frontend/admin-panel/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.app.json
frontend/admin-panel/src/layout/: AdminLayout.vue
frontend/admin-panel/src/router/: index.ts
frontend/admin-panel/src/services/: api.ts
frontend/tourist-app/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/tourist-app/src/: App.vue  style.css
(+168 files in other folders)
