[project]
name = "ai-smarttour-backend"
version = "0.1.0"
description = "景区导览服务AI数字人 - 后端服务"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite==0.21.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "openai>=1.30.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "redis>=5.0",
    "httpx>=0.27.0",
    "pypdf==5.7.0",
    "python-docx==1.2.0",
    "edge-tts>=6.1.9",
    "jieba>=0.42.1",
]

[project.optional-dependencies]
rag = [
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "FlagEmbedding>=1.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
